# app/Http/Controllers/GreetController.php
@@ -1,71 +1,128 @@
 <?php
-
 namespace App\Http\Controllers;
 
+use App\Models\Post;
 use Illuminate\Http\Request;
 
 /**
-* @OA\Info(
-* description="Contoh API doc menggunakan OpenAPI/Swagger",
-* version="0.0.1",
-* title="Contoh API documentation",
-* termsOfService="http://swagger.io/terms/",
-* @OA\Contact(
-* email="choirudin.emchagmail.com"
-* ),
-* @OA\License(
-* name="Apache 2.0",
-* url="http://www.apache.org/licenses/LICENSE-2.0.html"
-* )
-* )
-*/
+ * @OA\Info(
+ *     description="Contoh API doc menggunakan OpenAPI/Swagger",
+ *     version="0.0.1",
+ *     title="Contoh API documentation",
+ *     termsOfService="http://swagger.io/terms/",
+ *     @OA\Contact(
+ *         email="choirudin.emchagmail.com"
+ *     ),
+ *     @OA\License(
+ *         name="Apache 2.0",
+ *         url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *     )
+ * )
+ */
 
 class GreetController extends Controller
 {
     /**
-* @OA\Get(
-* path="/api/greet",
-* tags={"greeting"},
-* summary="Returns a Sample API response",
-* description="A sample greeting to test out the API",
-* operationId="greet",
-* @OA\Parameter(
-* name="firstname",
-* description="nama depan",
-* required=true,
-* in="query",
-* @OA\Schema(
-* type="string"
-* )
-* ),
-* @OA\Parameter(
-* name="lastname",
-* description="nama belakang",
-* required=true,
-* in="query",
-* @OA\Schema(
-* type="string"
-* )
-* ),
-* @OA\Response(
-* response="default",
-* description="successful operation"
-* )
-* )
-*/
+     * @OA\Get(
+     *     path="/api/greet",
+     *     tags={"greeting"},
+     *     summary="Returns a Sample API response",
+     *     description="A sample greeting to test out the API",
+     *     operationId="greet",
+     *     @OA\Parameter(
+     *         name="firstname",
+     *         description="nama depan",
+     *         required=true,
+     *         in="query",
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lastname",
+     *         description="nama belakang",
+     *         required=true,
+     *         in="query",
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     )
+     * )
+     */
     public function greet(Request $request)
-{
- $userData = $request->only([
- 'firstname',
- 'lastname',
- ]);
- if (empty($userData['firstname']) &&
-empty($userData['lastname'])) {
- return new \Exception('Missing data', 404);
- }
- return 'Halo ' . $userData['firstname'] . ' ' .
-$userData['lastname'];
-}
+    {
+        $userData = $request->only([
+            'firstname',
+            'lastname',
+        ]);
 
+        if (empty($userData['firstname']) && empty($userData['lastname'])) {
+            return new \Exception('Missing data', 404);
+        }
 
+        return 'Halo ' . $userData['firstname'] . ' ' . $userData['lastname'];
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/gallery",
+     *     tags={"gallery"},
+     *     summary="Returns a list of gallery items",
+     *     description="Get a list of gallery items with images",
+     *     operationId="getGallery",
+     *     @OA\Parameter(
+     *         name="category",
+     *         in="query",
+     *         description="Filter by category",
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         name="limit",
+     *         in="query",
+     *         description="Limit the number of results",
+     *         @OA\Schema(type="integer", format="int32")
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 type="object",
+     *                 @OA\Property(property="id", type="integer"),
+     *                 @OA\Property(property="title", type="string"),
+     *                 @OA\Property(property="picture", type="string"),
+     *                 @OA\Property(property="created_at", type="string"),
+     *                 @OA\Property(property="updated_at", type="string"),
+     *             )
+     *         )
+     *     )
+     * )
+     */
+    public function getGallery(Request $request)
+    {
+        $category = $request->input('category');
+        $limit = $request->input('limit');
+
+        $query = Post::query();
+
+        // Filter data based on the category parameter
+        if ($category) {
+            $query->where('title', 'like', "%$category%");
+        }
+
+        // Limit the number of results based on the limit parameter
+        if ($limit) {
+            $query->limit($limit);
+        }
+
+        // Retrieve the gallery data from the database
+        $galleryData = $query->get(['id', 'title', 'picture', 'created_at', 'updated_at']);
+
+        return response()->json(['gallery' => $galleryData]);
+    }
 }
